# api

./: .env  pyproject.toml
app/: main.py  models.py
app/modules/participants/: schema.py  views.py
app/modules/prize/: schema.py  views.py
app/modules/promo/: schema.py  views.py
app/modules/result/: schema.py  views.py
app/modules/winner/: schema.py  views.py
migrations/: env.py
migrations/versions/: 2bbfad597e47_init_migration2.py  4ab019938f85_init_migration2.py  5f55d3f66ad7_init_migration2.py  8abe737029a7_init_migration2.py  f9a387afa6eb_init_migration2.py
