[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["AnastasiyaPyankova <nastya.pyankova.empty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
